manifests/gwc-tenant-e.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: eg-tenant-e
spec:
  controllerName: gateway.envoyproxy.io/tenant-e-gatewayclass-controller
  parametersRef:
    group: config.gateway.envoyproxy.io
    kind: EnvoyProxy
    name: custom-proxy-config
    namespace: tenant-e
